created basic layout with navbar. Added bootstrap files.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,31 +1,44 @@
 <!doctype html>
 <html>
   <head>
-    <title>Fwitter</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Brewery Tracker</title>
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap-responsive.css">
   </head>
   <body>
-    <nav>
-      <% if logged_in? %>
-        
-        <a href="/tweets/new"> Create Tweet </a>
-        <a href="/logout"> Log Out </a>
-        <p>Welcome, <%=current_user.username %></p>
-
-      <% else %>
-        <a href="/signup">Sign Up</a>
-        <a href="/login"> Sign In </a>
-      <%end %>
-
-    </nav>
+    <nav class="navbar navbar-inverse">
+         <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+               <span class="sr-only">Toggle navigation</span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               </button>
+               <a class="navbar-brand" href="/">
+               <img alt="Brand" src="/images/beer.png">
+               </a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+               <ul class="nav navbar-nav">
+               <% if logged_in? %>
+                  <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                  <li><a href="/map">Map <span class="sr-only"></span></a></li>
+                  <li><a href="/list">My List <span class="sr-only"></span></a></li>
+               <% else %>
+                  <li><a href="/signup"> Sign Up <span class="sr-only"></span></a></li>
+                  <li><a href="/login"> Sign In <span class="sr-only"></span></a></li>
+               <%end %>
+               </ul>
+            </div> <!-- /.navbar-collapse -->
+         </div> <!-- /.container-fluid -->
+      </nav> <!-- /.navbar -->
     <div class="container">
-      <h1>Fwitter</h1>
-      <%= yield %> 
-      
-      
+      <%= yield %>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
   </body>
 </html>
