added routes to handle signup form. Also added jumbotron to index page with links to sign up and login

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,8 @@
-<h2> Welcome to Brewery Tracker! </h2>
+<div class="jumbotron">
+  <h2> Welcome to Brewery Tracker! </h2>
+  <p> A simple, easy to use site to track breweries you have visited. Sign up or Login below to get started.</p>
+  <div class="row">
+    <div class="col-md-2"><p><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up</a></p></div>
+    <div class="col-md-2"><p><a class="btn btn-primary btn-lg" href="/login" role="button">Login</a></p></div>
+  </div>
+</div>
