--- a/app/views/breweries/breweries.erb
+++ b/app/views/breweries/breweries.erb
@@ -1,10 +1,41 @@
 <p> Welcome <%= current_user.username %> </p>
-<a class="btn btn-primary" href="/breweries/new" role="button">Add a Brewery</button></a>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addbreweriesModal">Add a Brewery</button>
 
+<div class="modal fade" id="addbreweriesModal" tabindex="-1" role="dialog" aria-labelledby="credentialsModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <!-- Modal Header -->
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="credentialsModalLabel">Set Credentials</h4>
+            </div>
+            <!-- Modal Body -->
+            <div class="modal-body">
+              <form data-async data-target="#auth-response" data-modal="true" action="/breweries/new" method="POST">
+                <div class="form-group">
+                  <label for="BrewName">Brewery Name</label>
+                  <input type="text" name="brew_name" class="form-control" placeholder="Brewery Name"/>
+                </div>
+                <div class="form-group">
+                  <label for="BrewLocation">Brewery Location</label>
+                  <input type="text" name="brew_location" class="form-control" placeholder="City and State"/>
+                </div>
+                <div class="form-group">
+                  <label for="BrewNotes">Notes</label>
+                  <input type="text" name="brew_notes" class="form-control" placeholder="Anything of note?"/>
+                </div>
+                <button type="submit" class="btn btn-success">Submit</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div><!-- /.modal -->
 <h2> Breweries Visited </h2>
 
 <% @breweries.each do |breweries| %>
   <div>
-    <%= breweries.content %>
+    <%= breweries.name %>
+    <%= breweries.location %>
+    <%= breweries.notes %>
   </div>
 <% end %>
