--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,7 +17,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="/">
+               <a class="navbar-brand" href="/breweries">
                <img alt="Brand" src="/images/beer.png">
                </a>
             </div>
