--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -25,9 +25,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                <ul class="nav navbar-nav">
 
-                  <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                  <li class="active"><a href="/">My Breweries <span class="sr-only">(current)</span></a></li>
                   <li><a href="/map">Map <span class="sr-only"></span></a></li>
-                  <li><a href="/list">My List <span class="sr-only"></span></a></li>
+                  <li><a href="/account">My Account <span class="sr-only"></span></a></li>
                </ul>
                   <ul class="nav navbar-nav navbar-right" align="right">
                     <li><a href="/logout">Log Out</a></li>
